# hermes-feishu-a2a-plugin

./: .gitignore  LICENSE  README.md  __init__.py  accounts.example.json  agents.example.json  env.example  hermes-feishu-a2a  install.sh  plugin.yaml  pyproject.toml
hermes_feishu_a2a/: __init__.py  adapter_patch.py  cli.py  core.py
skills/a2a-collaboration-guide/: SKILL.md
skills/a2a-identity-diagnostics/: SKILL.md
skills/a2a-interrupt/: SKILL.md
skills/a2a-mode-switch/: SKILL.md
skills/a2a-result-merge/: SKILL.md
skills/a2a-status-check/: SKILL.md
skills/a2a-task-decompose/: SKILL.md
tests/: test_cli.py  test_core.py  test_plugin_entry.py
