[project]
name = "hermes-feishu-a2a-plugin"
version = "0.3.0"
description = "Hermes plugin for Feishu bot-to-bot multi-agent collaboration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Feishu A2A Contributors" }]
keywords = ["hermes", "feishu", "lark", "multi-agent", "a2a", "plugin"]

[project.scripts]
hermes-feishu-a2a = "hermes_feishu_a2a.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_feishu_a2a"]
